# Cloudmailin-Todoist-Sync

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: docker-build.yml
src/: app.go  chatgpt.py  datatype.py  handle_post.py  main.py  todoist.py
src/gptSummary/: chatgpt.go
src/gptSummary/template/: prompt.tmpl
src/handleRouter/: cloudmailinPost.go
src/utils/: token_counter.py
